WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243294
RTCDataChannel.binaryType setter should use SyntaxError
https://bugs.webkit.org/show_bug.cgi?id=243294
Summary
RTCDataChannel.binaryType setter should use SyntaxError
youenn fablet
Reported
2022-07-28 09:08:23 PDT
RTCDataChannel.binaryType setter should use SyntaxError
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2022-07-28 09:10:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2811
EWS
Comment 2
2022-07-29 02:39:41 PDT
Committed
252946@main
(ac230b42042b): <
https://commits.webkit.org/252946@main
> Reviewed commits have been landed. Closing PR #2811 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-07-29 02:40:38 PDT
<
rdar://problem/97772891
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug