RTCDataChannel.binaryType setter should use SyntaxError https://bugs.webkit.org/show_bug.cgi?id=243294

Reviewed by Eric Carlson.

* LayoutTests/imported/w3c/web-platform-tests/webrtc/RTCDataChannel-binaryType.window-expected.txt:
* Source/WebCore/Modules/mediastream/RTCDataChannel.cpp:
(WebCore::RTCDataChannel::setBinaryType):

Canonical link: https://commits.webkit.org/252946@main